First Filesharing implemented Big Gui update Big Crypto Update with custom Classes