@@ -24,27 +24,40 @@
 package sample.crypto;
 
 import com.github.jtendermint.crypto.ByteUtil;
+import com.google.common.io.BaseEncoding;
+import com.google.gson.Gson;
 import org.apache.commons.lang3.SerializationUtils;
+import org.bouncycastle.crypto.generators.RSAKeyPairGenerator;
+import sample.classes.CustomPublicKey;
+import sample.classes.IPFSFile;
+
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.GCMParameterSpec;
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.security.*;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.RSAPublicKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
+import java.security.Security;
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
 public abstract class CryptoUtil {
 
+    static {
+        Security.addProvider(new BouncyCastleProvider());
+    }
 
     //ASYM
     private static int RSA_KEY_LENGTH = 4096;
     private static String ALGORITHM_NAME = "RSA";
-    private static String PADDING_SCHEME = "OAEPWITHSHA-512ANDMGF1PADDING";
+    private static String PADDING_SCHEME = "PKCS1Padding";
     private static String MODE_OF_OPERATION = "ECB";
     private static String ASYM = ALGORITHM_NAME + "/" + MODE_OF_OPERATION + "/" + PADDING_SCHEME;
     //SYM
@@ -134,7 +147,7 @@ public abstract class CryptoUtil {
 
         KeyFactory factory = null;
         try {
-            factory = KeyFactory.getInstance("RSA");
+            factory = KeyFactory.getInstance(ALGORITHM_NAME);
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
@@ -165,25 +178,35 @@ public abstract class CryptoUtil {
     }
 
     public static String publicKeyToString(PublicKey pub){
-        return Base64.getEncoder().encodeToString(pub.getEncoded());
+        Gson gson = new Gson();
+        RSAPublicKey helper = (RSAPublicKey) pub;
+        CustomPublicKey custom = new CustomPublicKey(helper.getModulus(), helper.getPublicExponent());
+        return Base64.getEncoder().encodeToString(gson.toJson(custom).getBytes());
+    }
+
+    public static String stringFromIpfsFile(IPFSFile file){
+        Gson gson = new Gson();
+        return Base64.getEncoder().encodeToString(gson.toJson(file).getBytes());
+    }
+
+    public static IPFSFile ipfsFileFromString(String fileString){
+        byte[] decoded = Base64.getDecoder().decode(fileString);
+        byte[] base64Decoded = DatatypeConverter.parseBase64Binary(new String(decoded));
+        Gson gson = new Gson();
+        return gson.fromJson(new String(base64Decoded) ,IPFSFile.class);
     }
 
     public static PublicKey publicKeyFromString(String key){
 
-        X509EncodedKeySpec spec = null;
-
-        spec = new X509EncodedKeySpec(Base64.getDecoder().decode(key));
-
-        KeyFactory kf = null;
-        try {
-            kf = KeyFactory.getInstance(ALGORITHM_NAME);
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        }
+        byte[] decoded = Base64.getDecoder().decode(key);
+        byte[] base64Decoded = DatatypeConverter.parseBase64Binary(new String(decoded));
+        Gson gson = new Gson();
+        CustomPublicKey custom = gson.fromJson(new String(base64Decoded) , CustomPublicKey.class);
         PublicKey pubKey = null;
+
         try {
-            pubKey = kf.generatePublic(spec);
-        } catch (InvalidKeySpecException e) {
+            pubKey = KeyFactory.getInstance(ALGORITHM_NAME).generatePublic(new RSAPublicKeySpec(custom.getMod(),custom.getExp()));
+        } catch (InvalidKeySpecException | NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
 
